fix overflow bug 2

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,7 +18,6 @@
 body {
   color: white;
   background-color: #000535;
-  overflow-x: hidden;
 }
 
 h1, h2, h3 {
